syntax = "proto3";

package order;

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    string orderId = 1;
    string details = 2;
}

message CreateOrderResponse {
    string message = 1;
    bool success = 2;
}

