syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
}

message CreateUserResponse {
    string message = 1;
    bool success = 2;
}
